--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.2",
     "@tailwindcss/vite": "^4.1.4",
     "appwrite": "^17.0.2",
     "path-browserify": "^1.0.1",
@@ -17,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.2",
     "react-use": "^17.6.0",
     "stream-browserify": "^3.0.0"
   },
